# api-client-python

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/api_client/: __init__.py  request.py
tests/: test_api_requests.py
