[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "api-client"
version = "0.1.0"
description = "A REST API client library"
authors = [{name = "Elsy", email = "elsyntinyari01@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-cov>=6.2.0",
    "pytest-mock >=3.10"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"